# 3D_osg_drawing

./: .gitignore  3Drawing.sln  3Drawing.vcxproj  3Drawing.vcxproj.filters  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  PICKING_SYSTEM_README.md  PICKING_SYSTEM_REDESIGN.md  PICKING_SYSTEM_WORKFLOW.md  QUICK_START.md  README.md  VS项目使用说明.md  build.bat  build.cmd  build.sh  build_fixed.cmd  build_simple.cmd  code_skill.md  dev-note.md  log_export.txt  test_cmake_global_qt.cmd  vcpkg.json  ~$任务四.docx  任务四.docx
cmake/: ThirdPartyUtils.cmake
enc_temp_folder/1432b5e6855ec9e887c0fdf5f1c9b5/: OSGWidget.cpp
enc_temp_folder/d855861ec2c8c42e425473425a511eae/: ConstraintSystem.cpp
geo3D_demo/: geo3D_demo.sln
geo3D_demo/geo3D_demo/: geo3D_demo.vcxproj  geo3D_demo.vcxproj.filters  geo3d_demo.cpp
node/: 新几何对象管理系统设计.md
note/: OpenSceneGraph 核心结构与工作流程概览.md  osg的模糊认识.md  日志系统.md  环境变量.md
src/: CMakeLists.txt  Common3D.cpp  Common3D.h  Enums3D.h  Geo3D.cpp  Geo3D.h  MainWindow.cpp  MainWindow.h  PickingIndicator.cpp  PickingIndicator.h  PickingIntegration.cpp  PickingSystem.cpp  PickingSystem.h  main.cpp
src/core/: CMakeLists.txt  Common3D.cpp  Common3D.h  ConstraintSystem.cpp  ConstraintSystem.h  Enums3D.h  GeometryBase.cpp  GeometryBase.h
src/core/buildings/: BuildingFactory.cpp  BuildingFactory.h  CourtHouse3D.cpp  CourtHouse3D.h  DomeHouse3D.cpp  DomeHouse3D.h  FlatHouse3D.cpp  FlatHouse3D.h  GableHouse3D.cpp  GableHouse3D.h  LHouse3D.cpp  LHouse3D.h  SpireHouse3D.cpp  SpireHouse3D.h
src/core/camera/: CMakeLists.txt  CameraController.cpp  CameraController.h
src/core/geo3D/: CMakeLists.txt  Config3D.h  Enums3D.h  GeometryBase.cpp  GeometryBase.h  GeometryFactory.cpp  GeometryFactory.h  GlobalState3D.cpp  GlobalState3D.h  Types3D.h
src/core/geo3D/buildings/: CMakeLists.txt  DomeHouse3D.cpp  DomeHouse3D.h  FlatHouse3D.cpp  FlatHouse3D.h  GableHouse3D.cpp  GableHouse3D.h  LHouse3D.cpp  LHouse3D.h  SpireHouse3D.cpp  SpireHouse3D.h
src/core/geo3D/constraint/: CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintSystem.cpp  ConstraintSystem.h
src/core/geo3D/geometry/: Arc3D.cpp  Arc3D.h  BezierCurve3D.cpp  BezierCurve3D.h  Box3D.cpp  Box3D.h  CMakeLists.txt  Cone3D.cpp  Cone3D.h  Cube3D.cpp  Cube3D.h  Cylinder3D.cpp  Cylinder3D.h  Ellipsoid3D.cpp  Ellipsoid3D.h  Hemisphere3D.cpp  Hemisphere3D.h  Line3D.cpp  Line3D.h  Point3D.cpp  Point3D.h  Polygon3D.cpp  Polygon3D.h  Prism3D.cpp  Prism3D.h  Quad3D.cpp  Quad3D.h  Sphere3D.cpp  Sphere3D.h  Torus3D.cpp  Torus3D.h  Triangle3D.cpp  Triangle3D.h  UndefinedGeo3D.cpp  UndefinedGeo3D.h
src/core/geo3D/managers/: CMakeLists.txt  GeoControlPointManager.cpp  GeoControlPointManager.h  GeoNodeManager.cpp  GeoNodeManager.h  GeoRenderManager.cpp  GeoRenderManager.h  GeoStateManager.cpp  GeoStateManager.h
src/core/geo3D/utils/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  VertexShapeUtils.cpp  VertexShapeUtils.h
src/core/geometry/: Arc3D.cpp  Arc3D.h  BezierCurve3D.cpp  BezierCurve3D.h  Box3D.cpp  Box3D.h  Cone3D.cpp  Cone3D.h  Cube3D.cpp  Cube3D.h  Cylinder3D.cpp  Cylinder3D.h  Ellipsoid3D.cpp  Ellipsoid3D.h  Hemisphere3D.cpp  Hemisphere3D.h  Line3D.cpp  Line3D.h  Point3D.cpp  Point3D.h  Polygon3D.cpp  Polygon3D.h  Prism3D.cpp  Prism3D.h  Quad3D.cpp  Quad3D.h  Sphere3D.cpp  Sphere3D.h  Torus3D.cpp  Torus3D.h  Triangle3D.cpp  Triangle3D.h  UndefinedGeo3D.cpp  UndefinedGeo3D.h
src/core/managers/: GeoBoundingBoxManager.cpp  GeoBoundingBoxManager.h  GeoControlPointManager.cpp  GeoControlPointManager.h  GeoMaterialManager.cpp  GeoMaterialManager.h  GeoNodeManager.cpp  GeoNodeManager.h  GeoRenderManager.cpp  GeoRenderManager.h  GeoSnapPointManager.cpp  GeoSnapPointManager.h  GeoStateManager.cpp  GeoStateManager.h  LinuxRenderConfig.cpp  LinuxRenderConfig.h  OctreeManager.cpp  OctreeManager.h
src/core/picking/: CMakeLists.txt  CPUPickingSystem.cpp  CPUPickingSystem.h  GeometryPickingSystem.cpp  GeometryPickingSystem.h  OSGIndexPickingSystem.cpp  OSGIndexPickingSystem.h  PickingDiagnostic.cpp  PickingDiagnostic.h  PickingIndicator.cpp  PickingIndicator.h  PickingIntegration.cpp  PickingIntegration.h  PickingSystem.cpp  PickingSystem.h  PickingSystemInterface.h  PickingTypes.h  RayPickingSystem.cpp  RayPickingSystem.h  SimplifiedPickingSystem.cpp  SimplifiedPickingSystem.h
src/core/picking_old/: CPUPickingSystem.cpp  PickingIndicator.h  PickingIntegration.h  PickingSystem.cpp  PickingSystemInterface.cpp  SimplifiedPickingSystem.cpp  SimplifiedPickingSystem.h
src/core/world/: CoordinateSystem3D.cpp  CoordinateSystem3D.h  CoordinateSystemRenderer.cpp  CoordinateSystemRenderer.h  SceneManager3D.cpp  SceneManager3D.h  Skybox.cpp  Skybox.h
src/ui/: CMakeLists.txt  CoordinateSystemDialog.cpp  CoordinateSystemDialog.h  ImportInfoDialog.cpp  ImportInfoDialog.h  LogOutputWidget.cpp  LogOutputWidget.h  MainWindow.cpp  MainWindow.h  OSGWidget.cpp  OSGWidget.h  PickingSystemDialog.cpp  PickingSystemDialog.h  PropertyEditor3D.cpp  PropertyEditor3D.h  StatusBar3D.cpp  StatusBar3D.h  ToolPanel3D.cpp  ToolPanel3D.h
src/ui/interaction/: CMakeLists.txt  InputInteractionMode.cpp  InputInteractionMode.h  InteractionModeManager.cpp  InteractionModeManager.h
src/util/: CMakeLists.txt  GeoOsgbIO.cpp  GeoOsgbIO.h  GeometryFactory.cpp  GeometryFactory.h  IndicatorFactory.cpp  IndicatorFactory.h  LogManager.cpp  LogManager.h  MathUtils.cpp  MathUtils.h  OSGUtils.cpp  OSGUtils.h  ScaleBarRenderer.cpp  ScaleBarRenderer.h  VertexShapeUtils.cpp  VertexShapeUtils.h
